src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwU-dhP0.5.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    default-column-width {  }\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 336, bounds: 1248 × 688, states: []

post-map configures:
size: 1 × 336, bounds: 1248 × 688, states: [Activated]
